src/test/deca/context/valid/created/ops_arith/somme4.deca
// Description:
//    Programme minimaliste utilisant une affectation et une somme.
//
//
// Historique:
//    cree le 17/01/2020

{
    int x = 0;
    int y = 2;
    int z = 3;
    z = x + y;

    println(z);

}
