src/test/deca/context/invalid/created/cast_compatible/cast_FLOAT_to_INT.deca
// Description:
//    Affectation d'entier dans des floats
// Resultat:
//      Erreur contexte Ligne 9 : Types don't match! 



{
    int x = 2.0;
    int y = 3.04;
    int z = 3.045678;

    println(x, " ", y, " ", z);
}
